# Python

./: .gitignore  FOPDemoDatatypes.py  IkeaWebcrawl.py  ImagesColor.py  ImagesColorArrayKMeans.py  ImagesRemoveRed.py  WebCrawlWiki.py  image_bright.py  index.md  tensorflow-experiments.py  tictactoe.py
ImageProcessing/: ImageToPaint.py  ImagesColorArray.py  ImagesTest.py  Imagesblur.py
TextAnalysis/: ExtractSQLTables.py
WebCrawler/: Dictionary.com.py  Syllable.py  WebCrawlReuters.py
image-manipulator/: README.md  pyproject.toml
image-manipulator/image-manipulator/: ImageToPaint.py  ImagesColor.py  ImagesColorArray.py  ImagesColorArrayKMeans.py  ImagesRemoveRed.py  Imagesblur.py  helper.py  image_bright.py  picture.py
image-manipulator/util/: timer.py
